--- a/src/app/modules/dashboard/recovery-available/recovery-available.component.html
+++ b/src/app/modules/dashboard/recovery-available/recovery-available.component.html
@@ -18,6 +18,8 @@
                                 [labels]="chartOptions.labels"
                                 [title]="chartOptions.title"
                                 [theme]="chartOptions.theme"
+                                [tooltip]="chartOptions.tooltip"
+                                [dataLabels]="chartOptions.dataLabels"
                                 [responsive]="chartOptions.responsive"
                             ></apx-chart>
                         </div>
@@ -34,6 +36,8 @@
                                 [labels]="chartOptions.labels"
                                 [title]="chartOptions.title"
                                 [theme]="chartOptions.theme"
+                                [tooltip]="chartOptions.tooltip"
+                                [dataLabels]="chartOptions.dataLabels"
                                 [responsive]="chartOptions.responsive"
                             ></apx-chart>
                         </div>
