--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -47,6 +47,8 @@
                                 [labels]="chartOptions?.labels"
                                 [title]="chartOptions?.title"
                                 [theme]="chartOptions?.theme"
+                                [tooltip]="chartOptions.tooltip"
+                                [dataLabels]="chartOptions.dataLabels"
                                 [responsive]="chartOptions?.responsive"
                                 [noData]="chartOptions?.noData"
 
