--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -42,6 +42,8 @@
                             [chart]="chartOptions1?.chart"
                             [labels]="chartOptions1?.labels"
                             [theme]="chartOptions1?.theme"
+                            [tooltip]="chartOptions1.tooltip"
+                            [dataLabels]="chartOptions1.dataLabels"
                             [responsive]="chartOptions1?.responsive"
                             [noData]="chartOptions1.noData"
                             [colors]="chartOptions1?.colors"
@@ -59,6 +61,8 @@
                             [chart]="chartOptions2?.chart"
                             [labels]="chartOptions2?.labels"
                             [theme]="chartOptions2?.theme"
+                            [tooltip]="chartOptions2.tooltip"
+                            [dataLabels]="chartOptions2.dataLabels"
                             [responsive]="chartOptions2?.responsive"
                             [noData]="chartOptions2.noData"
 
@@ -79,6 +83,8 @@
                             [chart]="chartOptions3?.chart"
                             [labels]="chartOptions3?.labels"
                             [theme]="chartOptions3?.theme"
+                            [tooltip]="chartOptions3.tooltip"
+                            [dataLabels]="chartOptions3.dataLabels"
                             [responsive]="chartOptions3?.responsive"
                             [noData]="chartOptions3.noData"
 
@@ -96,6 +102,8 @@
                             [chart]="chartOptions4?.chart"
                             [labels]="chartOptions4?.labels"
                             [theme]="chartOptions4?.theme"
+                            [tooltip]="chartOptions4.tooltip"
+                            [dataLabels]="chartOptions4.dataLabels"
                             [responsive]="chartOptions4?.responsive"
                             [noData]="chartOptions4.noData"
 
