--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -47,6 +47,8 @@
                                 [labels]="chartOptions1.labels"
                                 [title]="chartOptions1.title"
                                 [theme]="chartOptions1.theme"
+                                [tooltip]="chartOptions1.tooltip"
+                                [dataLabels]="chartOptions1.dataLabels"
                                 [responsive]="chartOptions1.responsive"
                                 [noData]="chartOptions1.noData"
                                 [colors]="chartOptions1?.colors"
@@ -65,6 +67,8 @@
                                 [labels]="chartOptions2.labels"
                                 [title]="chartOptions2.title"
                                 [theme]="chartOptions2.theme"
+                                [tooltip]="chartOptions2.tooltip"
+                                [dataLabels]="chartOptions2.dataLabels"
                                 [responsive]="chartOptions2.responsive"
                                 [noData]="chartOptions2.noData"
 
@@ -82,6 +86,8 @@
                                 [labels]="chartOptions3.labels"
                                 [title]="chartOptions3.title"
                                 [theme]="chartOptions3.theme"
+                                [tooltip]="chartOptions3.tooltip"
+                                [dataLabels]="chartOptions3.dataLabels"
                                 [responsive]="chartOptions3.responsive"
                                 [noData]="chartOptions3.noData"
 
@@ -99,6 +105,8 @@
                                 [labels]="chartOptions4.labels"
                                 [title]="chartOptions4.title"
                                 [theme]="chartOptions4.theme"
+                                [tooltip]="chartOptions4.tooltip"
+                                [dataLabels]="chartOptions4.dataLabels"
                                 [responsive]="chartOptions4.responsive"
                                 [noData]="chartOptions4.noData"
 
