--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -47,6 +47,8 @@
                                 [labels]="chartOptions.labels"
                                 [title]="chartOptions.title"
                                 [theme]="chartOptions.theme"
+                                [tooltip]="chartOptions.tooltip"
+                                [dataLabels]="chartOptions.dataLabels"
                                 [responsive]="chartOptions.responsive"
                                 [noData]="chartOptions.noData"
 
@@ -144,7 +146,7 @@
                     <pagination-controls (pageChange)="p = $event" class="my-pagination"></pagination-controls>
                 </div>
             </div>
-           
+
 
         </div>
 
