--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -7,7 +7,8 @@
                     <mat-label class="customMatLabel">Year</mat-label>
                     <mat-select [(ngModel)]="year" name="year" #Year="ngModel" required>
 
-                        <mat-option *ngFor="let single_year of years;let i=index" [value]="single_year">{{single_year}}</mat-option>
+                        <mat-option *ngFor="let single_year of years;let i=index"
+                                    [value]="single_year">{{single_year}}</mat-option>
                     </mat-select>
                 </mat-form-field>
                 <div *ngIf="f.submitted && Year.invalid" class="invalid-feedback">
@@ -15,7 +16,8 @@
                 </div>
             </div>
             <div class="form-group col-lg-3">
-                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button (click)="getData()">
+                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
+                        (click)="getData()">
                     <mat-icon class="mr-2">search</mat-icon>
                     Search
                 </button>
@@ -35,8 +37,16 @@
                 <div class="col-lg-6">
                     <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartPerformanceIndicators" class=" mt-0 py-3">
-                            <apx-chart [series]="chartPerformanceIndicators?.series" [chart]="chartPerformanceIndicators?.chart" [labels]="chartPerformanceIndicators?.labels" [title]="chartPerformanceIndicators?.title" [theme]="chartPerformanceIndicators?.theme" [responsive]="chartPerformanceIndicators?.responsive"
-                                [noData]="chartPerformanceIndicators.noData" [colors]="chartPerformanceIndicators?.colors">
+                            <apx-chart [series]="chartPerformanceIndicators?.series"
+                                       [chart]="chartPerformanceIndicators?.chart"
+                                       [labels]="chartPerformanceIndicators?.labels"
+                                       [title]="chartPerformanceIndicators?.title"
+                                       [theme]="chartPerformanceIndicators?.theme"
+                                       [tooltip]="chartPerformanceIndicators.tooltip"
+                                       [dataLabels]="chartPerformanceIndicators.dataLabels"
+                                       [responsive]="chartPerformanceIndicators?.responsive"
+                                       [noData]="chartPerformanceIndicators.noData"
+                                       [colors]="chartPerformanceIndicators?.colors">
                             </apx-chart>
                         </div>
                     </div>
@@ -45,7 +55,15 @@
                 <div class="col-lg-6">
                     <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartLoanPortfolio" class=" mt-0 py-3">
-                            <apx-chart [series]="chartLoanPortfolio?.series" [chart]="chartLoanPortfolio?.chart" [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title" [theme]="chartLoanPortfolio?.theme" [responsive]="chartLoanPortfolio?.responsive" [noData]="chartLoanPortfolio.noData"></apx-chart>
+                            <apx-chart [series]="chartLoanPortfolio?.series"
+                                       [chart]="chartLoanPortfolio?.chart"
+                                       [labels]="chartLoanPortfolio?.labels"
+                                       [title]="chartLoanPortfolio?.title"
+                                       [theme]="chartLoanPortfolio?.theme"
+                                       [tooltip]="chartLoanPortfolio.tooltip"
+                                       [dataLabels]="chartLoanPortfolio.dataLabels"
+                                       [responsive]="chartLoanPortfolio?.responsive"
+                                       [noData]="chartLoanPortfolio.noData"></apx-chart>
                         </div>
                     </div>
 
@@ -56,7 +74,15 @@
                 <div class="col-lg-6 py-3">
                     <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
-                            <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart" [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title" [theme]="chartnoOfBorrowers?.theme" [responsive]="chartnoOfBorrowers?.responsive" [noData]="chartnoOfBorrowers?.noData"></apx-chart>
+                            <apx-chart [series]="chartnoOfBorrowers?.series"
+                                       [chart]="chartnoOfBorrowers?.chart"
+                                       [labels]="chartnoOfBorrowers?.labels"
+                                       [title]="chartnoOfBorrowers?.title"
+                                       [theme]="chartnoOfBorrowers?.theme"
+                                       [tooltip]="chartnoOfBorrowers.tooltip"
+                                       [dataLabels]="chartnoOfBorrowers.dataLabels"
+                                       [responsive]="chartnoOfBorrowers?.responsive"
+                                       [noData]="chartnoOfBorrowers?.noData"></apx-chart>
                         </div>
                     </div>
                 </div>
@@ -85,38 +111,38 @@
 
                         <tbody>
 
-                            <tr *ngFor="let items of DisbursmentAchievement" class="text-center">
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[0],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[0],1)}}
-                                        </div>
+                        <tr *ngFor="let items of DisbursmentAchievement" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[0], 0)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[1],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[1],1)}}
-                                        </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0], 1)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[2],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[2],1)}}
-                                        </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1], 0)}}
                                     </div>
-                                </td>
-                            </tr>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[1], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[2], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
@@ -135,38 +161,38 @@
                           </thead> -->
 
                         <tbody>
-                            <tr *ngFor="let items of RecoveryAchievement" class="text-center">
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[0],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[0],1)}}
-                                        </div>
+                        <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[0], 0)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[1],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[1],1)}}
-                                        </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[0], 1)}}
                                     </div>
-                                </td>
-                                <td>
-                                    <div class="d-grid">
-                                        <div>
-                                            {{dashboardService.getCamelCaseString(items[2],0)}}
-                                        </div>
-                                        <div class="fw-bold">
-                                            {{dashboardService.getCamelCaseString(items[2],1)}}
-                                        </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[1], 0)}}
                                     </div>
-                                </td>
-                            </tr>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[1], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCaseString(items[2], 0)}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{dashboardService.getCamelCaseString(items[2], 1)}}
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
@@ -177,31 +203,31 @@
                     <p class="heading mb-2 text-lg">Branch Position</p>
                     <table class="table table-striped">
                         <thead>
-                            <tr class="table-header-background">
-                                <th>Branch</th>
-                                <th>Disbursement</th>
-                                <th>Recovery</th>
-                                <th>NPL</th>
-                                <th>SAM</th>
-                                <th>Outstanding</th>
-                                <th>Audit Paras</th>
-                                <th>Utilization</th>
-                                <th>Mutation</th>
+                        <tr class="table-header-background">
+                            <th>Branch</th>
+                            <th>Disbursement</th>
+                            <th>Recovery</th>
+                            <th>NPL</th>
+                            <th>SAM</th>
+                            <th>Outstanding</th>
+                            <th>Audit Paras</th>
+                            <th>Utilization</th>
+                            <th>Mutation</th>
 
-                            </tr>
+                        </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let item of CirclePositions">
-                                <td>{{item?.Name}}</td>
-                                <td>{{item?.TotalDisbursment}}</td>
-                                <td>{{item?.TotalRecovery}}</td>
-                                <td>{{item?.NplOS}}</td>
-                                <td>{{item?.SamOS}}</td>
-                                <td>{{item?.TotalOS}}</td>
-                                <td>{{item?.AuditParas}}</td>
-                                <td>{{item?.Utilizations}}</td>
-                                <td>{{item?.Mutations}}</td>
-                            </tr>
+                        <tr *ngFor="let item of CirclePositions">
+                            <td>{{item?.Name}}</td>
+                            <td>{{item?.TotalDisbursment}}</td>
+                            <td>{{item?.TotalRecovery}}</td>
+                            <td>{{item?.NplOS}}</td>
+                            <td>{{item?.SamOS}}</td>
+                            <td>{{item?.TotalOS}}</td>
+                            <td>{{item?.AuditParas}}</td>
+                            <td>{{item?.Utilizations}}</td>
+                            <td>{{item?.Mutations}}</td>
+                        </tr>
                         </tbody>
 
                     </table>
