--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -14,8 +14,8 @@
         </div>
 
         <div class="flex mt-2 " style="flex-wrap: wrap;">
-                <app-zone-branch-circle [form]="PostDocument" [show_circle]="false"
-                                        (branchZoneCircleData)="getAllData($event)" [should_filter]="false"></app-zone-branch-circle>
+                <app-zone-branch-circle [form]="PostDocument"
+                                        (branchZoneCircleData)="getAllData($event)" [show_circle]="false" [should_filter]="false"></app-zone-branch-circle>
 
 
 
