--- a/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
@@ -12,7 +12,7 @@
                  style="cursor: pointer;justify-content: space-between;">
                 <div class=" self-center ml-8 w-64">
                         <span class=" text-green">
-                          {{activity.CreatedByName}} ({{activity?.PPNO}})
+                          {{activity.CreatedByName}} ({{activity?.Ppno}})
                         </span>
                 </div>
 
