--- a/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
@@ -53,7 +53,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr *ngFor="let child of activity.TourPlans;let j=index">
+                    <tr *ngFor="let child of activity.TourDiary;let j=index">
                         <td style="width: 20%">{{child?.ZoneName ? child?.ZoneName : "-"}}</td>
                         <td style="width: 20%">{{child?.BranchName ? child?.BranchName : "-"}}</td>
                         <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
