--- a/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
@@ -18,19 +18,19 @@
 
 
                 <div class="mr-5">
-                    <button class="mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary"
-                            mat-flat-button color="primary"
-                            (click)="$event.stopPropagation();change(activity,'A')">
-                        <mat-icon class="me-2">check_circle</mat-icon>
-                        Approve
-                    </button>
-                    <button
-                        class=" mx-3 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary bg-red-500"
-                        mat-flat-button color="warn"
-                        (click)="$event.stopPropagation();change(activity,'R',i,activity.UserId)">
-                        <mat-icon class="me-2">close</mat-icon>
-                        Referback
-                    </button>
+<!--                    <button class="mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary"-->
+<!--                            mat-flat-button color="primary"-->
+<!--                            (click)="$event.stopPropagation();change(activity,'A')">-->
+<!--                        <mat-icon class="me-2">check_circle</mat-icon>-->
+<!--                        Approve-->
+<!--                    </button>-->
+<!--                    <button-->
+<!--                        class=" mx-3 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary bg-red-500"-->
+<!--                        mat-flat-button color="warn"-->
+<!--                        (click)="$event.stopPropagation();change(activity,'R',i,activity.UserId)">-->
+<!--                        <mat-icon class="me-2">close</mat-icon>-->
+<!--                        Referback-->
+<!--                    </button>-->
                     <button mat-icon-button>
                         <mat-icon id="{{'arrow_down_'+i}}">expand_more</mat-icon>
                     </button>
