--- a/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="gridForm"
      class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
 
-    <button type="button" (click)="assignvalues()">do it</button>
+<!--    <button type="button" (click)="assignvalues()">do it</button>-->
     <div class="row pt-3">
         <div class="col-lg-12 p-0 col-sm-12">
             <div class="heading">Tour Diary of MCO</div>
