--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -5,7 +5,7 @@
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">TOUR DIARY & PROGRESS REPORT OF BRANCH MANAGER</div>
-            <button (click)="assignValues()">DO it</button>
+            <!--            <button (click)="assignValues()">DO it</button>-->
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
         </div>
