--- a/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
+++ b/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
@@ -33,6 +33,8 @@
                 <div class="flex" style="flex-wrap: wrap;">
                     <app-zone-branch-circle [form]="searchCnicForm" [show_circle]="true"
                                             [is_required_circle]="true"
+                                            [show_branch]="true"
+                                            [required_branch]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                     <div class="mx-2">
