--- a/src/app/modules/reports/reschedulement-of-loan/reschedulement-of-loan.component.html
+++ b/src/app/modules/reports/reschedulement-of-loan/reschedulement-of-loan.component.html
@@ -33,7 +33,7 @@
                             <div class="flex" style="flex-wrap: wrap;">
 
                                 <app-zone-branch-circle [form]="bufricationForm" [show_circle]="false"
-                                                        [is_required_circle]="false"
+                                                        [is_required_circle]="false" [show_branch]="true" [required_branch]="true"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
