--- a/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
+++ b/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
@@ -34,6 +34,7 @@
 
                                 <app-zone-branch-circle [form]="bufricationForm" [show_circle]="false"
                                                         [is_required_circle]="false"
+                                                        [show_branch]="true" [required_branch]="true"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
