--- a/src/app/modules/reports/disbursement-performance-purpose-wise/disbursement-performance-purpose-wise.component.html
+++ b/src/app/modules/reports/disbursement-performance-purpose-wise/disbursement-performance-purpose-wise.component.html
@@ -33,6 +33,7 @@
 
                                 <app-zone-branch-circle [form]="bufricationForm" [show_circle]="false"
                                                         [is_required_circle]="false"
+                                                        [show_branch]="true" [required_branch]="true"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
