--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -33,6 +33,7 @@
                 <div class="flex" style="flex-wrap: wrap;">
                     <app-zone-branch-circle [form]="searchCnicForm" [show_circle]="true"
                                             [is_required_circle]="false"
+                                            [show_branch]="true" [required_branch]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
