--- a/src/app/modules/reports/gl-move/gl-move.component.html
+++ b/src/app/modules/reports/gl-move/gl-move.component.html
@@ -31,7 +31,7 @@
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <app-zone-branch-circle [form]="bufricationForm" [show_circle]="false"
-                                                            [is_required_circle]="false"
+                                                            [is_required_circle]="false" [show_branch]="true" [required_branch]="true"
                                                             (branchZoneCircleData)="getAllData($event)" [should_filter]="false"></app-zone-branch-circle>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
