--- a/src/app/modules/reports/loan-move/loan-move.component.html
+++ b/src/app/modules/reports/loan-move/loan-move.component.html
@@ -31,7 +31,7 @@
                         <div class="col-lg-12">
                             <div class="flex" style="flex-wrap: wrap;">
                                 <app-zone-branch-circle [form]="bufricationForm" [show_circle]="false"
-                                                        [is_required_circle]="false"
+                                                        [is_required_circle]="false" [show_branch]="true" [required_branch]="true"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
