--- a/src/app/modules/reports/user-activity-based-report/user-activity-based-report.component.html
+++ b/src/app/modules/reports/user-activity-based-report/user-activity-based-report.component.html
@@ -33,7 +33,7 @@
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">PPNO:</mat-label>
+                                            <mat-label class="customMatLabel">PPNO<strong class="matMandatory">*</strong></mat-label>
                                             <input matInput placeholder="Enter PPNO" formControlName="PPNo"
                                                    appNumberOnly autocomplete="off"/>
                                         </mat-form-field>
