--- a/src/app/modules/reports/voucher-posting-day/voucher-posting-day.component.html
+++ b/src/app/modules/reports/voucher-posting-day/voucher-posting-day.component.html
@@ -34,6 +34,8 @@
                             <div class="flex" style="flex-wrap: wrap;">
                                 <app-zone-branch-circle [form]="bufricationForm" [show_circle]="false"
                                                         [is_required_circle]="false"
+                                                        [show_branch]="true"
+                                                        [required_branch]="true"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
