--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -188,7 +188,7 @@
             <button type="button" class="mr-2 bg-green" mat-raised-button color="primary"
                     (click)="approve()">
                 <mat-icon class="mr-2">check_circle</mat-icon>
-                Save
+                Approve
             </button>
             <button type="button" class="mr-2  bg-red" mat-raised-button color="primary"
                     (click)="referback()">
