Changes and bugs fixed

--- a/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
@@ -4,7 +4,7 @@
     <!--    <button type="button" (click)="assignvalues()">do it</button>-->
     <div class="row pt-3">
         <div class="col-lg-12 p-0 col-sm-12">
-            <div class="heading">Tour Diary of MCO</div>
+            <div class="heading">Tour Approval Diary of MCO</div>
         </div>
     </div>
     <div id="Kt-portlet-margin-top">
